fix: revert changes to other boards

--- a/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
@@ -248,7 +248,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
   -DDEBUG_LEVEL=0
 build_unflags = -std=gnu++11
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed = 250000
 debug_tool    = stlink
@@ -270,7 +270,7 @@ build_flags       = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags     = -std=gnu++11
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = SPI
+lib_ignore        = Adafruit NeoPixel, SPI
 lib_ldf_mode      = chain
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed     = 250000
@@ -330,7 +330,7 @@ build_flags       = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags     = -std=gnu++11
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = SPI
+lib_ignore        = Adafruit NeoPixel, SPI
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed     = 115200
 
@@ -346,7 +346,7 @@ build_flags       = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags     = -std=gnu++11
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = SPI
+lib_ignore        = Adafruit NeoPixel, SPI
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed     = 115200
 
@@ -362,7 +362,7 @@ build_flags       = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags     = -std=gnu++11
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = SPI
+lib_ignore        = Adafruit NeoPixel, SPI
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed     = 115200
 
@@ -378,7 +378,7 @@ build_flags       = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags     = -std=gnu++11
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = SPI
+lib_ignore        = Adafruit NeoPixel, SPI
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 monitor_speed     = 115200
 
@@ -391,7 +391,7 @@ framework     = arduino
 board         = disco_f407vg
 build_flags   = ${common.build_flags} -DUSE_STM32GENERIC -DSTM32GENERIC -DSTM32F4 -DMENU_USB_SERIAL -DMENU_SERIAL=SerialUSB -DHAL_IWDG_MODULE_ENABLED
 lib_deps      = ${common.lib_deps}
-lib_ignore    = TMCStepper
+lib_ignore    = Adafruit NeoPixel, TMCStepper
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32_F4_F7> -<src/HAL/HAL_STM32_F4_F7/STM32F7>
 monitor_speed = 250000
 
@@ -404,7 +404,7 @@ framework     = arduino
 board         = remram_v1
 build_flags   = ${common.build_flags} -DUSE_STM32GENERIC -DSTM32GENERIC -DSTM32F7 -DMENU_USB_SERIAL -DMENU_SERIAL=SerialUSB -DHAL_IWDG_MODULE_ENABLED
 lib_deps      = ${common.lib_deps}
-lib_ignore    = TMCStepper
+lib_ignore    = Adafruit NeoPixel, TMCStepper
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32_F4_F7> -<src/HAL/HAL_STM32_F4_F7/STM32F4>
 monitor_speed = 250000
 
@@ -420,7 +420,7 @@ build_flags   = ${common.build_flags}
   -O2 -ffreestanding -fsigned-char -fno-move-loop-invariants -fno-strict-aliasing -std=gnu11 -std=gnu++11
   -IMarlin/src/HAL/HAL_STM32
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SoftwareSerial
+lib_ignore    = Adafruit NeoPixel, SoftwareSerial
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32>
 monitor_speed = 250000
 
@@ -439,7 +439,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11 -DCONFIG_MAPLE_MINI_NO_DISABLE_DEBUG=1 -DERROR_LED_PORT=GPIOE -DERROR_LED_PIN=6
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = LiquidTWI2, SPI
+lib_ignore    = Adafruit NeoPixel, LiquidTWI2, SPI
 
 #
 # MKS Robin (STM32F103ZET6)
@@ -454,7 +454,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 
 #
 # MKS ROBIN LITE/LITE2 (STM32F103RCT6)
@@ -469,7 +469,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 
 #
 # MKS Robin Mini (STM32F103VET6)
@@ -484,7 +484,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 
 #
 # MKS Robin Nano (STM32F103VET6)
@@ -499,7 +499,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 
 #
 # JGAurora A5S A1 (STM32F103ZET6)
@@ -514,7 +514,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SPI
+lib_ignore    = Adafruit NeoPixel, SPI
 monitor_speed = 250000
 
 #
@@ -533,7 +533,7 @@ build_flags       = ${common.build_flags}
  -DUSBCON -DUSBD_USE_CDC -DUSBD_VID=0x0483 -DUSB_PRODUCT=\"BLACK_F407VE\"
   -IMarlin/src/HAL/HAL_STM32
 lib_deps          = ${common.lib_deps}
-lib_ignore        = TMCStepper, SailfishLCD, SailfishRGB_LED, SlowSoftI2CMaster, SoftwareSerial
+lib_ignore        = Adafruit NeoPixel, TMCStepper, SailfishLCD, SailfishRGB_LED, SlowSoftI2CMaster, SoftwareSerial
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_STM32>
 monitor_speed     = 250000
 
@@ -578,7 +578,7 @@ build_flags   = ${common.build_flags}
   -DPIN_SERIAL2_RX=PD_6
   -DPIN_SERIAL2_TX=PD_5
 lib_deps      = ${common.lib_deps}
-lib_ignore    = SailfishLCD, SailfishRGB_LED, SlowSoftI2CMaster
+lib_ignore    = Adafruit NeoPixel, SailfishLCD, SailfishRGB_LED, SlowSoftI2CMaster
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32>
 monitor_speed = 250000
 
@@ -592,6 +592,7 @@ board         = teensy31
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
   TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+lib_ignore    = Adafruit NeoPixel
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_TEENSY31_32>
 monitor_speed = 250000
 
@@ -605,7 +606,7 @@ board       = malyanM200
 build_flags = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py -DMCU_STM32F103CB -D __STM32F1__=1 -std=c++1y -D MOTHERBOARD="BOARD_MALYAN_M200" -DSERIAL_USB -ffunction-sections -fdata-sections -Wl,--gc-sections
   -DDEBUG_LEVEL=0 -D__MARLIN_FIRMWARE__
 src_filter  = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
-lib_ignore  = LiquidCrystal, LiquidTWI2, TMCStepper, U8glib-HAL, SPI
+lib_ignore  = Adafruit NeoPixel, LiquidCrystal, LiquidTWI2, TMCStepper, U8glib-HAL, SPI
 
 #
 # Chitu boards like Tronxy X5s (STM32F103ZET6)
@@ -620,6 +621,7 @@ build_flags   = !python Marlin/src/HAL/HAL_STM32F1/build_flags.py
 build_unflags = -std=gnu++11 -DCONFIG_MAPLE_MINI_NO_DISABLE_DEBUG= -DERROR_LED_PORT=GPIOE -DERROR_LED_PIN=6
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_STM32F1>
 lib_deps      = ${common.lib_deps}
+lib_ignore    = Adafruit NeoPixel
 
 #
 # Teensy 3.5 / 3.6 (ARM Cortex-M4)
@@ -631,6 +633,7 @@ board         = teensy35
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
   TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+lib_ignore    = Adafruit NeoPixel
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_TEENSY35_36>
 monitor_speed = 250000
 
