Compile with STM32F103RC_btt_512K

--- a/firmware/V1.0/Marlin-2.0.x-SKR-Mini-E3-V1.0/platformio.ini
+++ b/firmware/V1.0/Marlin-2.0.x-SKR-Mini-E3-V1.0/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = STM32F103RC_btt_512K_USB
+default_envs = STM32F103RC_btt_512K
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -340,8 +340,8 @@ monitor_speed     = 115200
 platform          = ststm32
 board             = genericSTM32F103RC
 board_upload.maximum_size=524288
-platform_packages = tool-stm32duino 
-build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py 
+platform_packages = tool-stm32duino
+build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
   ${common.build_flags} -DDEBUG_LEVEL=0 -std=gnu++14 -DHAVE_SW_SERIAL -DSS_TIMER=4 -DSTM32_FLASH_SIZE=512 -DUSE_USB_COMPOSITE
 build_unflags     = -std=gnu++11
 extra_scripts     = buildroot/share/PlatformIO/scripts/STM32F103RC_SKR_MINI.py
