Edited to compile successfully

--- a/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
@@ -249,7 +249,7 @@ lib_deps          = Servo
 # STM32F103RC
 #
 [env:STM32F103RC]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -265,7 +265,7 @@ monitor_speed     = 115200
 # STM32F103RC_fysetc
 #
 [env:STM32F103RC_fysetc]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 #board_build.core = maple
 platform_packages = tool-stm32duino
@@ -291,7 +291,7 @@ upload_protocol   = serial
 #
 
 [env:STM32F103RC_btt]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -306,7 +306,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_USB]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -321,7 +321,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_512K]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 board_upload.maximum_size=524288
 platform_packages = tool-stm32duino
@@ -337,7 +337,7 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_512K_USB]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
 board_upload.maximum_size=524288
 platform_packages = tool-stm32duino
@@ -356,7 +356,7 @@ monitor_speed     = 115200
 # STM32F103RE
 #
 [env:STM32F103RE]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RE
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -373,7 +373,7 @@ monitor_speed     = 115200
 #   STM32F103RE_btt_USB ......... RET6 (USB mass storage)
 #
 [env:STM32F103RE_btt]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RE
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -389,7 +389,7 @@ upload_protocol   = stlink
 monitor_speed     = 115200
 
 [env:STM32F103RE_btt_USB]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RE
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
@@ -593,7 +593,7 @@ lib_ignore    = Adafruit NeoPixel
 # 'STEVAL-3DP001V1' STM32F401VE board - https://www.st.com/en/evaluation-tools/steval-3dp001v1.html
 #
 [env:STM32F401VE_STEVAL]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = STEVAL_STM32F401VE
 platform_packages = framework-arduinoststm32@>=3.107,<4
 build_flags       = ${common.build_flags}
@@ -611,7 +611,7 @@ src_filter        = ${common.default_src_filter} +<src/HAL/STM32>
 # FLYF407ZG
 #
 [env:FLYF407ZG]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = FLYF407ZG
 platform_packages = framework-arduinoststm32@>=3.107,<4
 build_flags       = ${common.build_flags}
@@ -628,7 +628,7 @@ src_filter        = ${common.default_src_filter} +<src/HAL/STM32>
 # FYSETC S6 (STM32F446VET6 ARM Cortex-M4)
 #
 [env:FYSETC_S6]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = fysetc_s6
 platform_packages =
    tool-stm32duino
@@ -651,7 +651,7 @@ upload_protocol   = serial
 # Shield - https://github.com/jmz52/Hardware
 #
 [env:STM32F407VE_black]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = blackSTM32F407VET6
 platform_packages = framework-arduinoststm32@>=3.107,<4
 build_flags       = ${common.build_flags}
@@ -667,7 +667,7 @@ src_filter        = ${common.default_src_filter} +<src/HAL/STM32>
 # BigTreeTech SKR Pro (STM32F407ZGT6 ARM Cortex-M4)
 #
 [env:BIGTREE_SKR_PRO]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = BigTree_SKR_Pro
 platform_packages = framework-arduinoststm32@>=3.107,<4
 build_flags       = ${common.build_flags}
