--- a/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
@@ -205,7 +205,7 @@ HAS_TMC26X              = TMC26XStepper=https://github.com/trinamic/TMC26XSteppe
                           src_filter=+<src/module/TMC26X.cpp>
 HAS_L64XX               = Arduino-L6470@0.8.0
                           src_filter=+<src/libs/L64XX> +<src/module/stepper/L64xx.cpp> +<src/gcode/feature/L6470>
-NEOPIXEL_LED            = Adafruit NeoPixel@1.5.0
+NEOPIXEL_LED            = https://github.com/bigtreetech/Adafruit_NeoPixel
                           src_filter=+<src/feature/leds/neopixel.cpp>
 MAX6675_IS_MAX31865     = Adafruit MAX31865 library@~1.1.0
 HAS_GRAPHICAL_LCD       = U8glib-HAL@0.4.1
@@ -764,6 +764,7 @@ platform          = ${common_stm32f1.platform}
 extends           = env:STM32F103RC_btt
 board_upload.maximum_size=524288
 build_flags       = ${env:STM32F103RC_btt.build_flags} -DSTM32_FLASH_SIZE=512
+;custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/bigtreetech/Adafruit_NeoPixel
 
 [env:STM32F103RC_btt_512K_USB]
 platform          = ${common_stm32f1.platform}
