--- a/firmware/V1.2/Marlin-2.0.7.2-SKR-mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.7.2-SKR-mini-E3-V1.2/platformio.ini
@@ -796,6 +796,7 @@ platform          = ${common_stm32f1.platform}
 extends           = env:STM32F103RC_btt
 build_flags       = ${env:STM32F103RC_btt.build_flags} -DUSE_USB_COMPOSITE
 lib_deps          = ${env:STM32F103RC_btt.lib_deps}
+  Adafruit NeoPixel=https://github.com/CommandoreBombardiero/Adafruit_NeoPixel
   USBComposite for STM32F1@0.91
 
 [env:STM32F103RC_btt_512K]
@@ -809,6 +810,7 @@ platform          = ${common_stm32f1.platform}
 extends           = env:STM32F103RC_btt_512K
 build_flags       = ${env:STM32F103RC_btt_512K.build_flags} -DUSE_USB_COMPOSITE
 lib_deps          = ${env:STM32F103RC_btt_512K.lib_deps}
+  Adafruit NeoPixel=https://github.com/CommandoreBombardiero/Adafruit_NeoPixel
   USBComposite for STM32F1@0.91
 
 #
