--- a/firmware/V1.2/Marlin-2.0.7.2-SKR-mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.7.2-SKR-mini-E3-V1.2/platformio.ini
@@ -728,6 +728,8 @@ extends           = common_stm32f1
 board             = genericSTM32F103RC
 platform_packages = tool-stm32duino
 monitor_speed     = 115200
+#lib_deps      = ${common.default_src_filter}
+#custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/bigtreetech/Adafruit_NeoPixel
 
 #
 # MEEB_3DP (STM32F103RCT6 with 512K)
@@ -751,7 +753,7 @@ extra_scripts     = ${common.extra_scripts}
 lib_deps          = ${common.lib_deps}
   SoftwareSerialM
   USBComposite for STM32F1@0.91
-custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/ccccmagicboy/Adafruit_NeoPixel#meeb_3dp_use
+#custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/ccccmagicboy/Adafruit_NeoPixel#meeb_3dp_use
 debug_tool        = stlink
 upload_protocol   = dfu
 
