--- a/firmware/V2.0/Marlin-2.0.7.2-SKR-mini-E3-V2.0/platformio.ini
+++ b/firmware/V2.0/Marlin-2.0.7.2-SKR-mini-E3-V2.0/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = STM32F103RC_btt
+default_envs = STM32F103RC_btt_512K_USB
 include_dir  = Marlin
 
 #
@@ -710,14 +710,11 @@ src_filter    = ${common.default_src_filter} +<src/HAL/STM32> +<src/HAL/shared/b
 platform      = ststm32@~6.1
 build_flags   = !python Marlin/src/HAL/STM32F1/build_flags.py
   ${common.build_flags} -std=gnu++14 -DHAVE_SW_SERIAL
-  -DTONE_CHANNEL=4
-  -DTONE_TIMER=4
 build_unflags = -std=gnu11 -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/STM32F1>
 lib_ignore    = SPI
 lib_deps      = ${common.lib_deps}
   SoftwareSerialM
-custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/bigtreetech/Adafruit_NeoPixel
 
 #
 # STM32F103RC
