update neopixel lib

--- a/firmware/V2.0/Marlin-2.0.8.2.x-SKR-mini-E3-V2.0/ini/stm32f1-maple.ini
+++ b/firmware/V2.0/Marlin-2.0.8.2.x-SKR-mini-E3-V2.0/ini/stm32f1-maple.ini
@@ -107,6 +107,7 @@ extra_scripts        = ${common_stm32f1.extra_scripts}
   buildroot/share/PlatformIO/scripts/custom_board.py
 build_flags          = ${common_stm32f1.build_flags}
   -DDEBUG_LEVEL=0 -DSS_TIMER=4
+custom_marlin.NEOPIXEL_LED = Adafruit NeoPixel=https://github.com/bigtreetech/Adafruit_NeoPixel
 monitor_speed        = 115200
 
 [env:STM32F103RC_btt_USB_maple]
