Fix pin declaration for bltouch
Enabling the hardware pull-up resistor using '^' will make sure the bltouch functions as expected.
Without it the sensor will not be able to detect anything.

--- a/firmware/V3.0/Klipper/SKR-mini-E3-V3.0-klipper.cfg
+++ b/firmware/V3.0/Klipper/SKR-mini-E3-V3.0-klipper.cfg
@@ -10,7 +10,7 @@
 # See docs/Config_Reference.md for a description of parameters.
 
 [bltouch]
-sensor_pin: PC14
+sensor_pin: ^PC14
 control_pin: PA1
 x_offset: -40
 y_offset: -10
