--- a/firmware/V2.0/Marlin-2.0.8.2.x-SKR-mini-E3-V2.0/platformio.ini
+++ b/firmware/V2.0/Marlin-2.0.8.2.x-SKR-mini-E3-V2.0/platformio.ini
@@ -250,15 +250,15 @@ extra_scripts = ${common.extra_scripts}
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
 monitor_speed = 250000
-monitor_flags =
-  --quiet
-  --echo
-  --eol
-    LF
-  --filter
-    colorize
-  --filter
-    time
+#monitor_flags =
+#  --quiet
+#  --echo
+#  --eol
+#    LF
+#  --filter
+#   colorize
+#  --filter
+#    time
 
 #
 # Just print the dependency tree
@@ -266,5 +266,5 @@ monitor_flags =
 [env:include_tree]
 platform    = atmelavr
 board       = megaatmega2560
-build_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
-src_filter  = +<src/MarlinCore.cpp>
+build_src_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
+build_src_filter  = +<src/MarlinCore.cpp>
