--- a/firmware/V3.0/Klipper/SKR-mini-E3-V3.0-klipper.cfg
+++ b/firmware/V3.0/Klipper/SKR-mini-E3-V3.0-klipper.cfg
@@ -10,7 +10,7 @@
 # See docs/Config_Reference.md for a description of parameters.
 
 [bltouch]
-sensor_pin: ^PC14 #Remove ^ if print head crashes into bed
+sensor_pin: ^PC14 #Remove ^ if print head crashes into bed, the ^ is for the CR touch a bl touch should work without.
 control_pin: PA1
 x_offset: -40
 y_offset: -10
